--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ environment/frontend_server/temp_storage*/*
 environment/frontend_server/frontend_server/settings/local.py
 environment/frontend_server/static_dirs/*
 reverie/backend_server/cost-logs/*
-
+cost-logs/
 # Logs folder
 logs/*
 !logs/skip-morning_2024-05-15_13-54-44.txt
