agents run async

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 openai_config.json
 reverie/backend_server/utils.py
 environment/frontend_server/temp_storage/curr_sim_code.json
-
+.idea/
 environment/frontend_server/storage/*
 environment/frontend_server/temp_storage*/*
 environment/frontend_server/frontend_server/settings/local.py
