Adding asynchronous processing (fixing conflicts) (#6)
* change llm call to async

* resolve

* update

* some small change

* cognite module update

* commit

* update async

* agents run async

* agents run async

* undo reformat

* undo reformating

* Improve v1 prompt creation logic

* Rename object file to arena file

* Improve some v2 prompt creation logic

* Improve remaining v2 prompt creation logic

* Work on prompt & response parsing bugs

* Improve v3 prompt creation logic

* Add common function to get prompt file path

* Fix bugs due to prompt logic updates

---------

Co-authored-by: AnhDucVu <88773938+AnhDucVu-Hust@users.noreply.github.com>
Co-authored-by: chowington <connor.howington@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@
 openai_config.json
 reverie/backend_server/utils.py
 environment/frontend_server/temp_storage/curr_sim_code.json
-
+.idea/
 environment/frontend_server/storage/*
 environment/frontend_server/temp_storage*/*
 environment/frontend_server/frontend_server/settings/local.py
 environment/frontend_server/static_dirs/*
 reverie/backend_server/cost-logs/*
-
 # Logs folder
 logs/*
 !logs/skip-morning_2024-05-15_13-54-44.txt
