add queue handling

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ reverie/backend_server/cost-logs/*
 # Logs folder
 logs/*
 !logs/skip-morning_2024-05-15_13-54-44.txt
-
+reverie/backend_server/queue_log.txt
 ### Add simulations to keep here ###
 !environment/frontend_server/storage/base_the_ville_isabella_maria_klaus/
 !environment/frontend_server/storage/base_the_ville_n25/*
