--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ environment/frontend_server/temp_storage/curr_sim_code.json
 environment/frontend_server/storage/*
 environment/frontend_server/temp_storage*/*
 environment/frontend_server/frontend_server/settings/local.py
-environment/frontend_server/static_dirs/*
+environment/frontend_server/static_dirs/css/
+environment/frontend_server/static_dirs/img/
 reverie/backend_server/cost-logs/*
 reverie/backend_server/error_logging/
 # Logs folder
@@ -24,7 +25,9 @@ reverie/backend_server/embeddings_error.txt
 !environment/frontend_server/storage/base_the_ville_smol_elections_5_voters
 !environment/frontend_server/storage/base_the_ville_smol_elections_5_voters_swapped_personalities
 !environment/frontend_server/storage/base_hide_and_seek/
+!environment/frontend_server/storage/base_simulation_v1/
 !environment/frontend_server/storage/base_search_and_rescue/
+!environment/frontend_server/static_dirs/assets/characters/*
 ####################################
 
 # Ignore all environment and movement files except the starting environment file
