add skip_morning env

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ environment/frontend_server/log_agents/
 !environment/frontend_server/storage/base_the_ville_n25/*
 !environment/frontend_server/storage/July1_the_ville_isabella_maria_klaus-step-3-*/*
 !environment/frontend_server/storage/skip-morning-s-14/
+!environment/frontend_server/storage/skip_morning
 !environment/frontend_server/storage/base_the_ville_smol_elections_5_voters
 !environment/frontend_server/storage/base_the_ville_smol_elections_5_voters_swapped_personalities
 !environment/frontend_server/storage/base_hide_and_seek/
